fix: 검색 결과 페이지와 연극 리스트 페이지 변경된 api 적용

--- a/src/components/play-list/condition-search-material/ConditionSearchFrame.scss
+++ b/src/components/play-list/condition-search-material/ConditionSearchFrame.scss
@@ -22,9 +22,9 @@
     }
 
     .condition-checkbox {
-      padding-left: 20px;
-      width: 85%;
+      padding-left: 30px;
       display: flex;
+      padding: 5px 0 5px 30px;
 
       .condition-label {
         margin: 0;
