--- a/src/pages/play-list/PlayList.scss
+++ b/src/pages/play-list/PlayList.scss
@@ -1,5 +1,6 @@
 body {
   background-color: #fcf9f5;
+  font-family: "Noto Sans KR", sans-serif;
 }
 
 /*(반응형) 컴퓨터 사이즈에서 적용될 CSS*/
@@ -9,7 +10,6 @@ body {
     flex-direction: column;
     width: 1110px;
     margin: 30px auto;
-    font-family: "Nanum Gothic", sans-serif;
   }
 
   .play-list-main {
@@ -21,14 +21,13 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 30px 0;
+    padding: 66px 0;
   }
 }
 
 @media (min-width: 481px) and (max-width: 1130px) {
   .play-list-container {
     padding: 25px 20px;
-    font-family: "Nanum Gothic", sans-serif;
   }
 
   .play-list-main {
@@ -41,7 +40,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 30px 0;
+    padding: 66px 0;
   }
 }
 
@@ -52,7 +51,6 @@ body {
     flex-direction: column;
     margin: 20px auto;
     padding: 0 15px;
-    font-family: "Nanum Gothic", sans-serif;
   }
 
   .play-list-main {
