Feat: 게시판 댓글 기능 추가 - 댓글 생성, 수정, 삭제 API 연결 및 기능 완료

--- a/src/components/board/CommentForm.scss
+++ b/src/components/board/CommentForm.scss
@@ -10,6 +10,13 @@
   .flex-box {
     display: flex;
 
+    .user-profile-img {
+      width: 38px;
+      height: 38px;
+      object-fit: cover;
+      border-radius: 50%;
+    }
+
     textarea {
       margin-left: 10px;
       border-radius: 10px;
@@ -29,14 +36,14 @@
       }
     }
     textarea:focus {
-      border-color: black;
+      border-color: #919191;
     }
 
     textarea::placeholder {
       color: #bcbcbc;
     }
   }
-  .btn {
+  button.btn {
     margin-top: 10px;
     width: fit-content;
     align-self: flex-end;
