--- a/src/components/board/Comment.scss
+++ b/src/components/board/Comment.scss
@@ -12,23 +12,52 @@
       margin-left: 4px;
     }
 
+    .user-profile-img {
+      width: 36px;
+      height: 36px;
+      object-fit: cover;
+      border-radius: 50%;
+      margin-right: 4px;
+    }
+
     .user-id {
       font-size: 14px;
+      margin-bottom: 2px;
     }
 
     .time {
-      font-size: 10px;
+      font-size: 11px;
       line-height: 10px;
     }
 
-    .buttons * {
-      background: none;
-      border: none;
-      cursor: pointer;
-      margin-left: 10px;
-      padding: 0;
-      font-size: 12px;
-      color: #bcbcbc;
+    .buttons {
+      align-self: flex-end;
+
+      button {
+        margin-left: 4px;
+        font-size: 12px;
+        min-width: 56px;
+
+        &:hover {
+          color: #212121;
+        }
+      }
+
+      &.default {
+        align-self: flex-start;
+
+        button {
+          background: none;
+          border: none;
+          cursor: pointer;
+          padding: 0;
+          color: #bcbcbc;
+          min-width: 32px;
+          &:hover {
+            color: #797979;
+          }
+        }
+      }
     }
   }
 
@@ -63,6 +92,33 @@
       height: 100%;
       shape-outside: inset(calc(100% - 10px) 0 0 0);
       color: #fcf9f5;
+    }
+  }
+
+  .content.edit {
+    textarea {
+      border-radius: 4px;
+      flex-grow: 1;
+      height: 75px;
+      padding: 10px;
+      font-weight: 400;
+      resize: none;
+      font-family: "Noto Sans KR";
+      outline: none;
+      border: #bcbcbc solid 1px;
+
+      -ms-overflow-style: none; /* IE and Edge */
+      scrollbar-width: none; /* Firefox */
+      &::-webkit-scrollbar {
+        display: none;
+      }
+    }
+    textarea:focus {
+      border-color: #919191;
+    }
+
+    textarea::placeholder {
+      color: #bcbcbc;
     }
   }
 }
