Feat: 댓글 기능 수정 및 마이페이지 댓글 API 연결

--- a/src/components/mypage/MyComments.scss
+++ b/src/components/mypage/MyComments.scss
@@ -17,4 +17,12 @@
       margin: 0;
     }
   }
+
+  .body {
+    height: 632px;
+    width: 800px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
