fix: 디자인 살짝 추가

--- a/src/components/play-detail/PlayDetailTop.scss
+++ b/src/components/play-detail/PlayDetailTop.scss
@@ -72,6 +72,10 @@
           }
         }
 
+        .price {
+          flex-direction: column;
+        }
+
         p {
           margin-left: 15px;
           font-size: 18px;
