Design: 검색 페이지 디자인 변경 및 body 백그라운드 변경

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
-  background-color: #fcf9f5;
-  font-family: "Nanum Gothic",'Noto Sans KR';
+  background-color: #fff;
+  font-family: "Nanum Gothic", "Noto Sans KR";
 }
 
 .inner {
