--- a/src/pages/search-result/SearchResultPage.scss
+++ b/src/pages/search-result/SearchResultPage.scss
@@ -3,4 +3,7 @@
   flex-direction: column;
   font-family: "Noto Sans KR", sans-serif;
   min-height: 70vh;
+  max-width: 820px;
+  width: 100%;
+  margin: auto;
 }
