--- a/src/components/common/footer/Footer.scss
+++ b/src/components/common/footer/Footer.scss
@@ -19,8 +19,7 @@
     justify-content: center;
     color: white;
     h3 {
-      margin: 0;
-      margin-bottom: 5px;
+      margin: 4px 0 !important;
     }
     p {
       margin: 0;
