--- a/src/components/play-detail/play-review-metrials/PlayReviewContentBox.scss
+++ b/src/components/play-detail/play-review-metrials/PlayReviewContentBox.scss
@@ -20,6 +20,7 @@
       width: 200px;
       height: 200px;
       padding-top: 15px;
+      cursor: zoom-in;
     }
 
     .play-review-modify-btn {
