--- a/src/components/play-detail/PlayDetailInfo.scss
+++ b/src/components/play-detail/PlayDetailInfo.scss
@@ -4,12 +4,19 @@
     flex-direction: column;
     margin-top: 15px;
 
+    h3 {
+      font-size: 16px;
+    }
+
+    p {
+      font-size: 15px;
+    }
+
     div {
       margin-bottom: 30px;
 
       h3 {
         margin-bottom: 20px;
-        font-size: 22px;
       }
     }
 
@@ -55,6 +62,7 @@
     .detail-poster {
       h3 {
         padding-top: 20px;
+        margin-top: 0;
       }
 
       .detail-poster-img {
@@ -64,7 +72,7 @@
         align-items: center;
 
         img {
-          width: 95%;
+          width: 100%;
         }
       }
     }
