--- a/src/components/play-list/PlayBox.scss
+++ b/src/components/play-list/PlayBox.scss
@@ -8,12 +8,13 @@
   .play-box {
     display: flex;
     flex-direction: column;
-    margin: 30px 34px 50px 0;
+    align-items: center;
+    margin: 30px 36px 50px 0;
     transition: margin 0.5s;
 
     &:hover {
       cursor: pointer;
-      margin: 22px 34px 58px 0;
+      margin: 22px 36px 58px 0;
     }
 
     &:nth-child(4n) {
@@ -21,14 +22,14 @@
     }
 
     .play-img-box {
-      width: 250px;
-      height: 330px;
+      width: 240px;
+      height: 320px;
       border: 1px solid rgba(188, 188, 188, 0.5);
       border-radius: 8px;
 
       img {
-        width: 250px;
-        height: 330px;
+        width: 240px;
+        height: 320px;
         border-radius: 8px;
       }
     }
@@ -66,8 +67,8 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      width: 250px;
-      height: 330px;
+      width: 240px;
+      height: 320px;
       position: absolute;
       background-color: rgb(0, 0, 0, 0.5);
       font-family: "Noto Sans KR";
