--- a/src/pages/play-detail/PlayDetail.scss
+++ b/src/pages/play-detail/PlayDetail.scss
@@ -3,7 +3,7 @@
   .play-detail-container {
     display: flex;
     flex-direction: column;
-    width: 75%;
+    width: 1050px;
     margin: 50px auto;
     font-family: "Noto Sans KR", sans-serif;
   }
@@ -11,7 +11,7 @@
   .play-detail-main-box {
     border-radius: 8px;
     border: 1.5px solid rgba(188, 188, 188, 0.5);
-    padding: 0 20px 0;
+    padding: 0 30px 0;
     margin-top: 30px;
     background-color: #fff;
   }
