--- a/src/components/board-pr/PRBoardList.scss
+++ b/src/components/board-pr/PRBoardList.scss
@@ -1,31 +1,68 @@
 .pr-board-list-box {
-  margin: 40px 16px;
-  display: flex;
-  justify-content: space-between;
+  margin-top: 60px;
 
-  > * {
-    flex: 0 0 47%;
-    height: fit-content;
+  .flex-box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
 
-  .content-box {
+  .header {
+    width: 100%;
+    padding: 10px 0;
+    margin-bottom: 30px;
+    border-bottom: #6b72804d solid 1px;
+
+    .division > div {
+      margin-right: 24px;
+      cursor: pointer;
+      color: #7f7f7f;
+
+      &.selected {
+        color: #ffa200;
+        font-weight: 500;
+      }
+    }
+
+    .buttons > button {
+      margin-left: 10px;
+
+      .MuiButton-startIcon {
+        margin-right: 2px;
+      }
+
+      &.MuiButton-outlinedDarkGray:hover {
+        border-color: #89898980;
+      }
+    }
+  }
+
+  .body {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  .post-card {
+    box-sizing: border-box;
+    height: 300px;
+    width: 250px;
     position: relative;
     top: 0;
-    box-sizing: border-box;
-    height: fit-content;
-    width: 100%;
 
-    margin: 8px 0 70px 0;
+    margin-bottom: 70px;
     display: flex;
     flex-direction: column;
-    box-shadow: 2px 4px 10px rgba(0, 0, 0, 25%);
-    transition: all 300ms ease-out;
+    box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.061);
+    transition: all 200ms ease-out;
+    border-radius: 10px;
+    overflow: hidden;
 
     img {
       width: 100%;
-      min-height: 200px;
-      max-height: 600px;
+      height: 170px;
       object-fit: cover;
+      flex-shrink: 0;
 
       @media (max-width: 992px) {
         min-height: 100px;
@@ -33,33 +70,25 @@
       }
     }
 
-    .post-content-box {
+    .post-card-content {
+      height: 100%;
       background-color: #fff;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      padding: 30px 26px 18px 26px;
+      padding: 16px 16px 3px;
+      flex-flow: column;
 
       > * {
-        margin-bottom: 14px;
-      }
-
-      .flex-box {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+        margin-bottom: 8px;
       }
 
       .title {
-        font-size: 24px;
-        padding-bottom: 8px;
-        font-weight: 600;
+        font-size: 16px;
+        font-weight: 500;
+        height: 20px;
 
         display: -webkit-box;
         white-space: normal;
         -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
-        overflow: hidden;
 
         @media (max-width: 992px) {
           font-size: 20px;
@@ -67,22 +96,10 @@
         }
       }
 
-      .comments {
-        margin: 8px 0 0 10px;
-        font-size: 16px;
-        display: flex;
-        align-self: flex-start;
-        align-items: flex-start;
-        span {
-          margin-left: 4px;
-          line-height: 16px;
-        }
-      }
-
       .tags {
         display: flex;
         flex-wrap: wrap;
-        max-height: 56px;
+        max-height: 18px;
         @media (max-width: 992px) {
           max-height: 26px;
         }
@@ -91,35 +108,53 @@
 
         * {
           flex: 0 0 auto;
-          height: 24px;
           box-sizing: border-box;
-          background-color: #d9d9d9;
-          margin: 0 6px 4px 0;
-          padding: 3px 8px;
-          border-radius: 7px;
-          font-size: 14px;
+          background-color: #ebebeb;
+          margin-right: 6px;
+          padding: 3px;
+          border-radius: 4px;
           font-weight: 400;
-          line-height: 16px;
+          font-size: 12px;
+          color: #62676c;
         }
       }
 
-      .content {
-        font-size: smaller;
+      .date {
+        font-size: 14px;
         display: -webkit-box;
         white-space: normal;
         -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
         overflow: hidden;
+        color: #62676c;
 
         @media (max-width: 992px) {
           -webkit-line-clamp: 1;
         }
       }
     }
+
+    .post-card-footer {
+      padding: 6px 16px;
+      font-size: 12px;
+      display: flex;
+      justify-content: flex-end;
+      border-top: #f1f1f1 solid 1px;
+      color: #7c7c7c;
+
+      .MuiSvgIcon-root {
+        margin-left: 10px;
+      }
+
+      span {
+        margin-left: 2px;
+        line-height: 14px;
+      }
+    }
   }
 
   .content-box:hover {
-    top: -6px;
-    // box-shadow: 2px 4px 11px #858585;
+    top: -4px;
+    box-shadow: 2px 6px 9px rgba(0, 0, 0, 0.061);
   }
 }
