--- a/src/pages/free-board/FreeBoardListPage.scss
+++ b/src/pages/free-board/FreeBoardListPage.scss
@@ -1,10 +1,90 @@
 .free-board-page {
   font-family: "Noto Sans KR";
   width: 100%;
-  max-width: 820px;
+  max-width: 1110px;
+  display: flex;
+  justify-content: space-between;
+
+  .free-board-left-container {
+    flex-grow: 1;
+  }
+
+  .free-board-right-container {
+    width: 250px;
+    margin-left: 60px;
+
+    .right-box {
+      margin-bottom: 60px;
+
+      h4 {
+        margin: 0;
+        padding: 12px 0;
+        border-bottom: #dcdcdc solid 1px;
+        font-size: 14px;
+        font-weight: 500;
+      }
+
+      li {
+        margin: 14px 0;
+        font-size: 12px;
+        color: #505050;
+      }
+    }
+  }
+
+  .flex-box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .header {
+    width: 100%;
+    padding: 10px 0;
+    border-bottom: #6b72804d solid 1px;
+    color: #7f7f7f;
+
+    .left {
+      font-weight: 500;
+      font-size: 16px;
+      display: flex;
+      align-items: center;
+
+      .point {
+        color: #ffb400;
+      }
+
+      .refresh {
+        margin: 2px 0 0 6px;
+        transform: rotate(-90deg);
+        font-size: 20px;
+
+        &.start {
+          transition: all 300ms;
+          transform: rotate(-270deg);
+        }
+
+        &:hover {
+          color: #ff9900;
+        }
+      }
+    }
+
+    .buttons > button {
+      margin-left: 10px;
+
+      .MuiButton-startIcon {
+        margin-right: 2px;
+      }
+
+      &.MuiButton-outlinedDarkGray:hover {
+        border-color: #89898980;
+      }
+    }
+  }
 
   .main {
-    margin: 0 3%;
+    margin: 0;
   }
 
   .state {
