--- a/src/pages/pr-board/PRBoardListPage.scss
+++ b/src/pages/pr-board/PRBoardListPage.scss
@@ -1,7 +1,128 @@
 .pr-board-page {
   font-family: "Noto Sans KR";
-  max-width: 1040px;
+  max-width: 1110px;
   width: 100%;
+
+  .best-box {
+    width: 100%;
+    height: 400px;
+    overflow: hidden;
+    border-radius: 6px;
+    position: relative;
+
+    .bg-img {
+      width: 95%;
+      height: 100%;
+      object-fit: cover;
+      position: absolute;
+    }
+
+    .bg-mask {
+      position: absolute;
+      left: 0;
+      top: 0;
+      // z-index: 4;
+      width: 100%;
+      height: 100%;
+      -webkit-backdrop-filter: blur(4px);
+      backdrop-filter: blur(4px);
+      background: linear-gradient(to right, #0f0f0f 5%, rgba(15, 15, 15, 0.304) 50%, #0f0f0f 95%);
+    }
+
+    .contents-container {
+      margin: 44px 160px;
+      z-index: 10;
+      color: #fff;
+      height: calc(100% - 88px);
+      display: flex;
+      justify-content: space-between;
+
+      .left-box {
+        width: 100%;
+        flex: 1 1;
+        display: flex;
+        flex-direction: column;
+        margin-right: 100px;
+        flex-wrap: wrap;
+
+        .number {
+          position: absolute;
+          left: 180px;
+          bottom: 10px;
+          font-size: 300px;
+          color: #cacaca50;
+        }
+
+        .sub-title {
+          font-size: 18px;
+          font-weight: 600;
+          color: #e0e0e0;
+        }
+
+        .title {
+          font-size: 36px;
+          font-weight: 400;
+          margin: 30px 0;
+        }
+
+        .date {
+          font-size: 14px;
+          color: #ffffffbb;
+          margin: 12px 0;
+        }
+
+        .content {
+          font-size: 14px;
+          color: #ffffffbb;
+          margin: 12px 0;
+          flex-grow: 1;
+        }
+
+        .footer {
+          font-size: 30px;
+          color: #7c7c7c;
+          display: flex;
+          align-items: flex-end;
+
+          .MuiSvgIcon-root {
+            padding-top: 4px;
+          }
+
+          span {
+            margin: 0 36px 0 6px;
+            line-height: 34px;
+            color: #ffffffeb;
+          }
+        }
+      }
+
+      .poster {
+        height: 100%;
+        max-width: 300px;
+        object-fit: cover;
+      }
+    }
+
+    .arrow {
+      position: absolute;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      color: #ffffff33;
+
+      > .MuiSvgIcon-root {
+        font-size: 40px;
+        margin: 0 20px;
+
+        &:hover {
+          color: #ffffff67;
+        }
+      }
+    }
+  }
 
   .state {
     width: calc(100% - 32px);
