--- a/src/components/mypage/MyPickList.scss
+++ b/src/components/mypage/MyPickList.scss
@@ -26,7 +26,7 @@
     margin-top: 20px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 
     .content-container {
@@ -35,7 +35,6 @@
       justify-content: space-between;
       align-items: flex-start;
       width: 800px;
-      height: 100%;
 
       &.loading {
         justify-content: center;
