--- a/src/components/board-free/FreeBoardList.scss
+++ b/src/components/board-free/FreeBoardList.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
 
   .content-box {
+    color: #787878;
     display: flex;
     flex-direction: column;
     border-bottom: #6b72804d solid 1px;
@@ -35,31 +36,55 @@
     }
 
     .title {
-      font-size: 22px;
+      color: #000000;
+      font-size: 16px;
       font-weight: 500;
-      padding-bottom: 6px;
+      padding-bottom: 10px;
     }
 
     .bottom {
       .content {
         width: 70%;
         font-size: small;
-        color: #787878;
         display: -webkit-box;
-        white-space: normal;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
-        overflow: hidden;
-        // text-overflow: ellipsis;
+        text-overflow: ellipsis;
       }
 
-      .comments {
-        font-size: small;
+      .tags {
+        width: 70%;
         display: flex;
-        align-items: center;
-        margin-top: auto;
+        flex-wrap: wrap;
+        max-height: 18px;
+        @media (max-width: 992px) {
+          max-height: 26px;
+        }
+        overflow: hidden;
+
+        * {
+          flex: 0 0 auto;
+          box-sizing: border-box;
+          background-color: #ebebeb;
+          margin-right: 6px;
+          padding: 3px;
+          border-radius: 4px;
+          font-weight: 400;
+          font-size: 12px;
+          color: #62676c;
+        }
+      }
+
+      .post-card-footer {
+        font-size: 12px;
+        display: flex;
+        justify-content: flex-end;
+
+        .MuiSvgIcon-root {
+          margin-left: 10px;
+        }
+
         span {
-          margin-left: 4px;
+          margin-left: 2px;
+          line-height: 14px;
         }
       }
     }
