--- a/src/components/board-pr/PRBoardList.scss
+++ b/src/components/board-pr/PRBoardList.scss
@@ -1,3 +1,5 @@
+@import "../../App.scss";
+
 .pr-board-list-box {
   margin-top: 60px;
 
@@ -83,12 +85,18 @@
       .title {
         font-size: 16px;
         font-weight: 500;
-        height: 20px;
 
-        display: -webkit-box;
-        white-space: normal;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
+        width: 100%;
+        height: 20px;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+
+        &.tl-2 {
+          @include ellipsis(2, 20px);
+          height: 40px;
+          white-space: wrap;
+        }
 
         @media (max-width: 992px) {
           font-size: 20px;
