Design: 게시판 디테일 페이지 디자인 수정(미완성)

--- a/src/components/board-free/FreeBoardList.scss
+++ b/src/components/board-free/FreeBoardList.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
 
   .content-box {
+    width: 100%;
     color: #787878;
     display: flex;
     flex-direction: column;
@@ -45,9 +46,11 @@
     .bottom {
       .content {
         width: 70%;
+        max-width: 500px;
         font-size: small;
-        display: -webkit-box;
         text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
       }
 
       .tags {
