--- a/src/pages/free-board/FreeBoardListPage.scss
+++ b/src/pages/free-board/FreeBoardListPage.scss
@@ -6,30 +6,7 @@
   justify-content: space-between;
 
   .free-board-left-container {
-    flex-grow: 1;
-  }
-
-  .free-board-right-container {
-    width: 250px;
-    margin-left: 60px;
-
-    .right-box {
-      margin-bottom: 60px;
-
-      h4 {
-        margin: 0;
-        padding: 12px 0;
-        border-bottom: #dcdcdc solid 1px;
-        font-size: 14px;
-        font-weight: 500;
-      }
-
-      li {
-        margin: 14px 0;
-        font-size: 12px;
-        color: #505050;
-      }
-    }
+    flex: 1 1;
   }
 
   .flex-box {
