--- a/src/components/board-free/FreeBoardPost.scss
+++ b/src/components/board-free/FreeBoardPost.scss
@@ -1,17 +1,22 @@
 .free-board-post {
   background-color: #fff;
-  padding: 40px;
-  border-radius: 40px;
+  padding: 30px 0 40px;
   display: flex;
   flex-direction: column;
-  box-shadow: 2px 1px 6px #00000016;
 
   .title {
-    font-size: 34px;
+    font-size: 30px;
     font-weight: 500;
+    color: #111827;
   }
 
   .content {
-    white-space: pre;
+    color: #374151;
+    font-size: 16px;
+    line-height: 24px;
+
+    p {
+      padding: 6px 0;
+    }
   }
 }
