--- a/src/components/board/BoardNav.scss
+++ b/src/components/board/BoardNav.scss
@@ -1,15 +1,19 @@
 .nav-box {
   display: flex;
   justify-content: space-between;
-  padding: 10px 0 10px 10px;
+  padding: 20px 0;
   box-sizing: border-box;
+  border-top: #bcbcbc5b solid 1px;
+  color: #111827;
+
   .point {
     color: #ffb400;
   }
+
   span {
-    font-weight: 600;
     font-size: 16px;
   }
+
   .refresh {
     transform: rotate(-90deg);
     &.start {
