--- a/src/components/board/Comment.scss
+++ b/src/components/board/Comment.scss
@@ -1,12 +1,12 @@
 .comment-box {
   display: flex;
   flex-direction: column;
-  border-bottom: 1px solid #bcbcbc;
-  padding: 16px 4px;
+  border-bottom: 1px solid #6b72804d;
+  padding: 24px 4px 30px;
 
   .top {
     display: flex;
-    margin-bottom: 6px;
+
     .flex-box {
       flex-grow: 1;
       margin-left: 4px;
@@ -22,12 +22,15 @@
 
     .user-id {
       font-size: 14px;
-      margin-bottom: 2px;
+      font-weight: 500;
+      line-height: 20px;
+      color: #111827;
     }
 
     .time {
-      font-size: 11px;
-      line-height: 10px;
+      font-size: 12px;
+      line-height: 16px;
+      color: #374151;
     }
 
     .buttons {
@@ -65,10 +68,15 @@
     display: flex;
     width: 100%;
     position: relative;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 25px;
+    color: #374151;
+    padding: 10px 0 6px;
 
     .close {
       display: -webkit-box;
-      -webkit-line-clamp: 3;
+      -webkit-line-clamp: 10;
       -webkit-box-orient: vertical;
       overflow: hidden;
       width: fit-content;
@@ -91,7 +99,7 @@
       align-items: flex-end;
       height: 100%;
       shape-outside: inset(calc(100% - 10px) 0 0 0);
-      color: #fcf9f5;
+      color: #fff;
     }
   }
 
