--- a/src/components/board/CommentForm.scss
+++ b/src/components/board/CommentForm.scss
@@ -4,8 +4,9 @@
   flex-direction: column;
   box-sizing: border-box;
   padding: 18px 14px;
-  border-radius: 20px;
-  box-shadow: 1px 1px 4px #00000016;
+  margin: 10px 0 20px;
+  border-radius: 4px;
+  border: #6b72804d solid 1px;
 
   .flex-box {
     display: flex;
@@ -19,15 +20,15 @@
 
     textarea {
       margin-left: 10px;
-      border-radius: 10px;
+      border-radius: 4px;
       flex-grow: 1;
       height: 75px;
       padding: 10px;
-      font-weight: 500;
+      font-weight: 400;
       resize: none;
       font-family: "Noto Sans KR";
       outline: none;
-      border: #bcbcbc solid 1px;
+      border: #6b72804d solid 1px;
 
       -ms-overflow-style: none; /* IE and Edge */
       scrollbar-width: none; /* Firefox */
@@ -36,7 +37,7 @@
       }
     }
     textarea:focus {
-      border-color: #919191;
+      border-color: #6b72809f;
     }
 
     textarea::placeholder {
