--- a/src/pages/free-board/FreeBoardDetailPage.scss
+++ b/src/pages/free-board/FreeBoardDetailPage.scss
@@ -1,10 +1,15 @@
 .free-board-detail {
   font-family: "Noto Sans KR";
   width: 100%;
-  max-width: 840px;
+  max-width: 1110px;
+  display: flex;
+  justify-content: space-between;
+
+  .free-board-left-container {
+    flex-grow: 1;
+  }
 
   .body {
-    padding: 0 20px;
     display: flex;
     flex-direction: column;
 
@@ -16,9 +21,6 @@
   }
 
   .nav-box {
-    margin-top: 40px;
-    * {
-      font-weight: 500;
-    }
+    margin-top: 100px;
   }
 }
