--- a/src/components/main/MainPreferredRegion.scss
+++ b/src/components/main/MainPreferredRegion.scss
@@ -3,7 +3,7 @@
 }
 .region-list-box {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   height: 50px;
   gap: 12px;
   margin-left: 4px;
