--- a/src/components/main/MainPublicity.scss
+++ b/src/components/main/MainPublicity.scss
@@ -1,96 +1,36 @@
-.main-publicit-header {
+.main-publicity-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 16px;
-  margin-bottom: 32px;
+  gap: 50px;
+  width: 1200px;
+  height: 1600px;
+  background-color: aliceblue;
 }
-.main-publicity-title {
-  color: white;
+.publicity-box1 {
+  width: 460px;
+  height: 1600px;
+  background-color:aqua;
 }
-.publicity-btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100px;
-  height: 40px;
-  font-weight: 600;
-  color: black;
-  background-color: white;
-  border: 1.5px solid white;
-  border-radius: 40px;
-  transition: 0.3s;
+.publicity-box2 {
+  width: 320px;
+  height: 1600px;
+  background-color: red
 }
-.publicity-btn:hover {
-  cursor: pointer;
-  background-color: #282828;
-  color: white;
+.publicity-box3 {
+  width: 320px;
+  height: 1600px;
+  background-color: darkblue
 }
-.publicit-wrapper {
-  .publicit-slide-container {
-    overflow: hidden;
-
-    .publicit-slide-wrapper {
-      display: flex;
-      flex-wrap: nowrap;
-    }
-    .slide {
-      display: flex;
-      align-items: center;
-      flex-wrap: nowrap;
-      position: relative;
-      &.original {
-        animation: 60s linear infinite normal none running infiniteAnimation1;
-      }
-      &.clone {
-        animation: 60s linear infinite infiniteAnimation2;
-      }
-      &.stop {
-        animation-play-state: paused;
-      }
-      li {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 0 12px;
-        width: 320px;
-        height: 280px;
-        img {
-          border: 1px solid black;
-          border-radius: 8px;
-          max-height: 100%; /* 이미지의 최대 높이를 li의 높이로 제한 */
-          max-width: 100%; /* 이미지의 최대 넓이를 li의 넓이로 제한 */
-          object-fit: cover; /* 이미지가 li 박스를 꽉 채우도록 설정 */
-          transition: 0.4s;
-          &:hover {
-            cursor: pointer;
-            filter: brightness(70%);
-          }
-        }
-      }
-    }
-  }
+.publicity-product1 {
+  width: 460px;
+  height: 600px;
+  background-color: red
 }
-
-@keyframes infiniteAnimation1 {
-  0% {
-    transform: translateX(0%);
-  }
-  50% {
-    transform: translateX(-100%);
-  }
-  50.1% {
-    transform: translateX(100%);
-  }
-  100% {
-    transform: translateX(0%);
-  }
+.publicity-product {
+  width: 100%;
+  height: 500px; /* 이미지가 넘치지 않도록 최대 높이 설정 */
+  overflow: hidden; /* 넘치는 이미지 숨기기 */
 }
-@keyframes infiniteAnimation2 {
-  0% {
-    transform: translateX(0%);
-  }
-  100% {
-    transform: translateX(-200%);
-  }
+.publicity-product img {
+  width: 100%;
+  height: auto;
 }
