--- a/src/components/main/MainPublicity.scss
+++ b/src/components/main/MainPublicity.scss
@@ -1,34 +1,43 @@
 .main-publicity-container {
   display: flex;
   gap: 50px;
+  color: white;
   width: 1200px;
   height: 1600px;
-  background-color: aliceblue;
 }
 .publicity-box1 {
   width: 460px;
-  height: 1600px;
-  background-color:aqua;
+  height: 1400px;
 }
 .publicity-box2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-bottom: 100px;
   width: 320px;
-  height: 1600px;
-  background-color: red
+  height: 1400px;
 }
 .publicity-box3 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-top: 100px;
   width: 320px;
-  height: 1600px;
-  background-color: darkblue
+  height: 1400px;
 }
 .publicity-product1 {
-  width: 460px;
-  height: 600px;
-  background-color: red
+  width: 100%;
+  height: auto; /* 이미지가 넘치지 않도록 높이 자동 조절 */
+  background-color: #202020;
+}
+.publicity-product1 img {
+  width: 100%;
+  height: auto;
 }
 .publicity-product {
   width: 100%;
-  height: 500px; /* 이미지가 넘치지 않도록 최대 높이 설정 */
-  overflow: hidden; /* 넘치는 이미지 숨기기 */
+  height: auto; /* 이미지가 넘치지 않도록 높이 자동 조절 */
+  background-color: #202020;
 }
 .publicity-product img {
   width: 100%;
