--- a/src/components/board-free/FreeBoardList.scss
+++ b/src/components/board-free/FreeBoardList.scss
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     border-bottom: #6b72804d solid 1px;
+    box-sizing: border-box;
     padding: 16px 8px;
     background-color: #fff;
 
@@ -47,6 +48,7 @@
       .content {
         width: 70%;
         max-width: 500px;
+        height: 16px;
         font-size: small;
         text-overflow: ellipsis;
         white-space: nowrap;
