--- a/src/components/board-pr/PRBoardPost.scss
+++ b/src/components/board-pr/PRBoardPost.scss
@@ -1,24 +1,70 @@
 .pr-board-post {
   background-color: #fff;
-  padding: 30px 0 40px;
+  padding: 30px 0 0;
   display: flex;
   flex-direction: column;
 
   .top-container {
     display: flex;
+    width: 100%;
     padding-bottom: 40px;
     border-bottom: 1px solid #6b72804d;
+    margin-bottom: 20px;
 
-    .left-box {
-      flex: 1 1;
+    .main-img {
+      height: 320px;
+      width: 240px;
+      object-fit: cover;
     }
-  }
 
-  .main-img {
-    height: 260px;
-    max-width: 220px;
-    object-fit: cover;
-    margin-left: 40px;
+    .flex-column {
+      display: flex;
+      flex-direction: column;
+      flex: 1 1;
+
+      .box {
+        position: relative;
+        background-color: #f8f9fa;
+        padding: 20px 30px;
+        margin: 0 0 20px 20px;
+        width: 260px;
+        height: 150px;
+        box-sizing: border-box;
+
+        .lable {
+          width: fit-content;
+          font-size: 12px;
+          padding: 4px 8px;
+          border: 1px #ffb300 solid;
+          border-radius: 20px;
+          font-weight: 500;
+          color: #ffb300;
+        }
+
+        .value {
+          font-size: 14px;
+          font-weight: 500;
+          margin-top: 14px;
+          line-height: 18px;
+        }
+
+        .icon {
+          position: absolute;
+          bottom: 14px;
+          right: 12px;
+          width: 32px;
+          height: 32px;
+          color: #d9d9d9;
+
+          &.double {
+            width: 41px;
+            height: 41px;
+            bottom: 6px;
+            right: 6px;
+          }
+        }
+      }
+    }
   }
 
   .title {
@@ -31,7 +77,6 @@
     color: #374151;
     font-size: 16px;
     line-height: 24px;
-    padding: 20px 0;
 
     p {
       padding: 6px 0;
