--- a/src/components/play-detail/PlayReview.scss
+++ b/src/components/play-detail/PlayReview.scss
@@ -4,12 +4,12 @@
   }
 
   .play-review-container .play-review-list {
-    padding: 10px 30px 0 30px;
+    padding: 5px 30px;
   }
 
   .play-review-not-exsist {
-    font-weight: 700;
-    font-size: 24px;
+    font-weight: 500;
+    font-size: 18px;
     display: flex;
     justify-content: center;
     align-items: center;
