--- a/src/components/play-detail/play-review-metrials/PlayReviewListBox.scss
+++ b/src/components/play-detail/play-review-metrials/PlayReviewListBox.scss
@@ -1,7 +1,7 @@
 @media (min-width: 925px) {
   .play-review-list-box {
     border-bottom: 1px solid rgb(188, 188, 188, 0.5);
-    padding: 0 20px;
+    padding: 5px 20px;
     display: flex;
     align-items: center;
 
