--- a/src/components/play-list/condition-search-material/ConditionSearchFrame.scss
+++ b/src/components/play-list/condition-search-material/ConditionSearchFrame.scss
@@ -17,7 +17,7 @@
       justify-content: center;
       align-items: center;
       padding: 0 20px;
-      font-weight: 700;
+      font-weight: 500;
       border-right: 1.5px solid rgba(188, 188, 188, 0.5);
     }
 
@@ -33,6 +33,13 @@
 
       label {
         margin-right: 45px;
+      }
+    }
+
+    .date-picker {
+      input {
+        padding: 10px 0 10px 15px;
+        width: 150px;
       }
     }
   }
