--- a/src/components/search/play-search-result/PlaySearchContentBox.scss
+++ b/src/components/search/play-search-result/PlaySearchContentBox.scss
@@ -23,7 +23,8 @@
       height: 182px;
       border-radius: 8px;
       position: relative;
-      top: 2.5px;
+      top: 0.7px;
+      object-fit: cover;
     }
   }
 
@@ -40,12 +41,19 @@
 
     h3 {
       padding: 15px 0;
-      font-size: 20px;
+      font-size: 18px;
+      font-weight: 500;
     }
 
     p {
       padding: 1.5px 0;
       font-size: 14px;
+      color: #808080;
+      line-height: 1.3;
+    }
+
+    .location {
+      font-weight: 500;
     }
   }
 
@@ -63,7 +71,7 @@
         height: 40px;
 
         p {
-          font-weight: bold;
+          font-weight: 500;
           font-size: 16px;
         }
       }
@@ -75,7 +83,7 @@
         height: 40px;
 
         p {
-          font-weight: bold;
+          font-weight: 500;
           font-size: 16px;
         }
       }
