--- a/src/components/play-detail/play-review-metrials/ReviewForm.scss
+++ b/src/components/play-detail/play-review-metrials/ReviewForm.scss
@@ -8,13 +8,17 @@
     display: flex;
     flex-direction: column;
 
+    h2 {
+      font-size: 18px;
+    }
+
     .review-title-box {
       display: flex;
       align-items: center;
 
       h3 {
         margin-right: 30px;
-        font-size: 18px;
+        font-size: 16px;
       }
     }
 
@@ -24,7 +28,7 @@
 
       h3 {
         margin-right: 30px;
-        font-size: 18px;
+        font-size: 16px;
       }
     }
 
@@ -33,7 +37,7 @@
       flex-direction: column;
 
       h3 {
-        font-size: 18px;
+        font-size: 16px;
       }
 
       div {
@@ -47,7 +51,7 @@
 
       h3 {
         margin-right: 30px;
-        font-size: 18px;
+        font-size: 16px;
       }
     }
 
@@ -56,7 +60,7 @@
       align-items: center;
 
       h3 {
-        font-size: 18px;
+        font-size: 16px;
       }
 
       .file-upload-btn {
@@ -82,6 +86,8 @@
     }
 
     .review-guide-text {
+      padding-top: 10px;
+
       p {
         margin: 10px 0;
         font-size: 14px;
@@ -93,6 +99,7 @@
       justify-content: flex-end;
       display: flex;
       margin: 10px 0 20px;
+
       button {
         margin-left: 30px;
       }
