--- a/src/pages/main/Main.scss
+++ b/src/pages/main/Main.scss
@@ -6,7 +6,7 @@
 .banner-container {
     display: flex;
     justify-content: center;
-    height: 340px;
+    height: 320px;
     background-repeat: repeat;
     background-size: contain;
 }
@@ -31,7 +31,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 1700px;
+    height: 100%;
+    padding: 80px 0;
     background-color: #282828;
 }
 .rating-container {
