--- a/src/components/main/MainReview.scss
+++ b/src/components/main/MainReview.scss
@@ -19,7 +19,7 @@
     background-color: #eee;
     border: black solid 1px;
     border-radius: 30px;
-    box-shadow: 10px 10px 4px rgba(0, 0, 0, 0.7);
+    box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.3);
     h3 {
         font-size: 20px;
         margin: 28px 0 16px 0;
@@ -42,7 +42,7 @@
 .review-h2 {
     font-size: 26px;
     color: white;
-    margin: 0px;
+    margin-bottom: 8px;
 }
 .review-p {
     font-size: 16px;
