--- a/src/components/board-pr/PRBoardPost.scss
+++ b/src/components/board-pr/PRBoardPost.scss
@@ -7,9 +7,9 @@
   .top-container {
     display: flex;
     width: 100%;
-    padding-bottom: 40px;
+    padding-bottom: 10px;
     border-bottom: 1px solid #6b72804d;
-    margin-bottom: 20px;
+    margin: 20px 0 10px;
 
     .main-img {
       height: 320px;
