fix: 전체적으로 디자인 수정

--- a/src/components/play-detail/PlayReview.scss
+++ b/src/components/play-detail/PlayReview.scss
@@ -1,6 +1,7 @@
 @media (min-width: 480px) {
   .play-review-container {
     margin: 30px 0;
+    min-height: 313.8px;
   }
 
   .play-review-container .play-review-list {
