--- a/src/components/play-detail/play-review-metrials/AverageRatingBox.scss
+++ b/src/components/play-detail/play-review-metrials/AverageRatingBox.scss
@@ -15,14 +15,15 @@
       .rating {
         font-size: 22px;
         font-weight: 700;
-        padding-left: 30px;
+        padding-left: 20px;
         position: relative;
-        bottom: 5px;
+        bottom: 7px;
       }
 
       .rating-addtional-text {
         font-size: 14px;
         padding: 15px 0;
+        color: #808080;
       }
     }
 
