--- a/src/components/play-list/PlayListHeader.scss
+++ b/src/components/play-list/PlayListHeader.scss
@@ -24,6 +24,7 @@
       text-align: center;
       border: 1px solid rgba(188, 188, 188, 0.7);
       border-radius: 8px;
+      font-family: "Noto Sans KR", sans-serif;
     }
   }
 }
